i40e: clean up coccicheck reported errors (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15305,6 +15305,7 @@
 	patches.drivers/i40e-0012-i40e-small-clean-ups-from-review.patch
 	patches.drivers/i40e-0013-i40e-convert-ret-to-aq_ret.patch
 	patches.drivers/i40e-0014-i40e-better-return-values.patch
+	patches.drivers/i40e-0015-i40e-clean-up-coccicheck-reported-errors.patch
 
 	########################################################
 	# Wireless Networking
