i40e/i40evf: modify debug prints to avoid seg faults (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15668,6 +15668,7 @@
 	patches.drivers/i40e-0375-i40e-clear-VEB-stats-when-pf-stats-are-cleared.patch
 	patches.drivers/i40e-0376-i40e-keep-service-tasks-out-of-reset-process.patch
 	patches.drivers/i40e-0377-i40e-i40evf-Update-RSS-configuration.patch
+	patches.drivers/i40e-0378-i40e-i40evf-modify-debug-prints-to-avoid-seg-faults.patch
 
 	########################################################
 	# Wireless Networking
