i40e: fix Timesync Tx interrupt handler code (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15571,6 +15571,7 @@
 	patches.drivers/i40e-0278-i40e-Cleanup-if-else-statements.patch
 	patches.drivers/i40e-0279-i40e-Tweak-for-loop-in-i40e_ethtool.c.patch
 	patches.drivers/i40e-0280-i40e-report-VF-link-state-correctly.patch
+	patches.drivers/i40e-0281-i40e-fix-Timesync-Tx-interrupt-handler-code.patch
 
 	########################################################
 	# Wireless Networking
