--- a/series.conf
+++ b/series.conf
@@ -15505,6 +15505,7 @@
 	patches.drivers/i40e-0212-i40e-remove-unnecessary-delay.patch
 	patches.drivers/i40e-0213-i40e-tighten-up-ring-enable-disable-flow.patch
 	patches.drivers/i40e-0214-i40e-Change-MSIX-to-MSI-X.patch
+	patches.drivers/i40e-0215-i40e-Flow-Director-sideband-accounting.patch
 
 	########################################################
 	# Wireless Networking
