--- a/series.conf
+++ b/series.conf
@@ -15532,6 +15532,7 @@
 	patches.drivers/i40e-0239-i40e-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/i40e-0240-net-i40e-Avoid-double-setting-of-NETIF_F_SG-for-the-.patch
 	patches.fixes/net-core-Add-VF-link-state-control.patch
+	patches.drivers/i40e-0242-i40e-support-VF-link-state-ndo.patch
 
 	########################################################
 	# Wireless Networking
