i40e: fixup legacy interrupt handling (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15321,6 +15321,7 @@
 	patches.drivers/i40e-0028-i40e-do-not-flush-after-re-enabling-interrupts.patch
 	patches.drivers/i40e-0029-i40e-don-t-free-nonexistent-rings.patch
 	patches.drivers/i40e-0030-i40e-assign-correct-vector-to-VF.patch
+	patches.drivers/i40e-0031-i40e-fixup-legacy-interrupt-handling.patch
 
 	########################################################
 	# Wireless Networking
