i40e: init code and hardware support (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15296,6 +15296,7 @@
 	patches.drivers/i40e-0003-i40e-driver-ethtool-core.patch
 	patches.drivers/i40e-0004-i40e-driver-core-headers.patch
 	patches.drivers/i40e-0005-i40e-implement-virtual-device-interface.patch
+	patches.drivers/i40e-0006-i40e-init-code-and-hardware-support.patch
 
 	########################################################
 	# Wireless Networking
