i40e: Remove unnecessary assignment (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15756,6 +15756,7 @@
 	patches.drivers/i40e-0463-i40e-Add-dual-speed-module-support.patch
 	patches.drivers/i40e-0464-i40e-Allow-user-to-change-link-settings-if-link-is-d.patch
 	patches.drivers/i40e-0465-i40e-Change-wording-to-be-more-consistent.patch
+	patches.drivers/i40e-0466-i40e-Remove-unnecessary-assignment.patch
 
 	########################################################
 	# Wireless Networking
