i40e/i40evf: add PPRS bit to error bits and fix bug in Rx checksum (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15644,6 +15644,7 @@
 	patches.drivers/i40e-0351-i40e-implement-anti-spoofing-for-VFs.patch
 	patches.drivers/i40e-0352-i40e-Changes-to-Interrupt-distribution-policy.patch
 	patches.drivers/i40e-0353-i40e-keep-SR-IOV-enabled-in-the-case-that-RSS-VMDQ-F.patch
+	patches.drivers/i40e-0354-i40e-i40evf-add-PPRS-bit-to-error-bits-and-fix-bug-i.patch
 
 	########################################################
 	# Wireless Networking
