--- a/series.conf
+++ b/series.conf
@@ -15451,6 +15451,7 @@
 	patches.drivers/i40e-0158-i40e-Fix-GPL-header.patch
 	patches.drivers/i40e-0159-i40e-Fix-MAC-format-in-Write-MAC-address-AQ-cmd.patch
 	patches.drivers/i40e-0160-i40e-add-a-comment-on-barrier-and-fix-panic-on-reset.patch
+	patches.drivers/i40e-0161-i40e-disable-packet-split.patch
 
 	########################################################
 	# Wireless Networking
