--- a/series.conf
+++ b/series.conf
@@ -15524,6 +15524,7 @@
 	patches.drivers/i40e-0231-i40e-Fix-function-comments.patch
 	patches.drivers/i40e-0232-i40e-Define-a-new-state-variable-to-keep-track-of-fe.patch
 	patches.drivers/i40e-0233-i40e-Add-code-to-handle-FD-table-full-condition.patch
+	patches.drivers/i40e-0234-i40e-Bug-fix-for-FDIR-replay-logic.patch
 
 	########################################################
 	# Wireless Networking
