i40e: driver core headers (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15294,6 +15294,7 @@
 	patches.drivers/i40e-0001-i40e-main-driver-core.patch
 	patches.drivers/i40e-0002-i40e-transmit-receive-and-NAPI.patch
 	patches.drivers/i40e-0003-i40e-driver-ethtool-core.patch
+	patches.drivers/i40e-0004-i40e-driver-core-headers.patch
 
 	########################################################
 	# Wireless Networking
