i40e: Add support for 64 bit netstats (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15317,6 +15317,7 @@
 	patches.drivers/i40e-0024-i40e-Move-q_vectors-from-pointer-to-array-to-array-o.patch
 	patches.drivers/i40e-0025-i40e-Replace-ring-container-array-with-linked-list.patch
 	patches.drivers/i40e-0026-i40e-Move-rings-from-pointer-to-array-to-array-of-po.patch
+	patches.drivers/i40e-0027-i40e-Add-support-for-64-bit-netstats.patch
 
 	########################################################
 	# Wireless Networking
