--- a/series.conf
+++ b/series.conf
@@ -15437,6 +15437,7 @@
 	patches.drivers/i40e-0144-i40e-Stop-accepting-any-VLAN-tag-on-VLAN-0-filter-se.patch
 	patches.drivers/i40e-0145-i40e-Allow-VF-to-set-already-assigned-MAC-address.patch
 	patches.drivers/i40e-0146-i40e-Add-code-to-wait-for-FW-to-complete-in-reset-pa.patch
+	patches.drivers/i40e-0147-i40e-update-firmware-api-to-1.1.patch
 
 	########################################################
 	# Wireless Networking
