i40e: Re-enable interrupt on ICR0 (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15446,6 +15446,7 @@
 	patches.drivers/i40e-0153-i40e-Enable-Disable-PF-switch-LB-on-SR-IOV-configure.patch
 	patches.drivers/i40e-0154-i40e-remove-redundant-AQ-enable.patch
 	patches.drivers/i40e-0155-i40e-correctly-setup-ARQ-descriptors.patch
+	patches.drivers/i40e-0156-i40e-Re-enable-interrupt-on-ICR0.patch
 
 	########################################################
 	# Wireless Networking
