i40e/i40evf: Bump i40e/i40evf versions (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15761,6 +15761,7 @@
 	patches.drivers/i40e-0468-i40e-make-warning-less-verbose.patch
 	patches.drivers/i40e-0469-i40e-Fix-an-issue-when-PF-reset-fails.patch
 	patches.drivers/i40e-0470-i40e-fix-panic-due-to-too-early-Tx-queue-enable.patch
+	patches.drivers/i40e-0471-i40e-i40evf-Bump-i40e-i40evf-versions.patch
 
 	########################################################
 	# Wireless Networking
