--- a/series.conf
+++ b/series.conf
@@ -15507,6 +15507,7 @@
 	patches.drivers/i40e-0214-i40e-Change-MSIX-to-MSI-X.patch
 	patches.drivers/i40e-0215-i40e-Flow-Director-sideband-accounting.patch
 	patches.drivers/i40e-0216-i40e-Prevent-overflow-due-to-kzalloc.patch
+	patches.drivers/i40e-0217-i40e-i40evf-i40e-implementation-for-skb_set_hash.patch
 
 	########################################################
 	# Wireless Networking
