i40e/i40evf: remove rx_errors and rx_missed (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15614,6 +15614,7 @@
 	patches.drivers/i40e-0321-i40e-i40evf-VEB-structure-added-GTIME-macro-update.patch
 	patches.drivers/i40e-0322-i40e-refactor-send-version.patch
 	patches.drivers/i40e-0323-i40e-refactor-stats-collection.patch
+	patches.drivers/i40e-0324-i40e-i40evf-remove-rx_errors-and-rx_missed.patch
 
 	########################################################
 	# Wireless Networking
