i40e: Fix the FD sideband logic to detect a FD table full condition (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15689,6 +15689,7 @@
 	patches.drivers/i40e-0396-i40e-don-t-store-user-requested-mode-until-we-ve-val.patch
 	patches.drivers/i40e-0397-i40e-only-create-PTP-device-node-once.patch
 	patches.drivers/i40e-0398-i40e-Avoid-adding-the-TCP-IPv4-filter-twice.patch
+	patches.drivers/i40e-0399-i40e-Fix-the-FD-sideband-logic-to-detect-a-FD-table-.patch
 
 	########################################################
 	# Wireless Networking
