i40e: Warn admin to reload VF driver on port VLAN configuration (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15479,6 +15479,7 @@
 	patches.drivers/i40e-0186-i40e-associate-VMDq-queue-with-VM-type.patch
 	patches.drivers/i40e-0187-i40e-make-message-meaningful.patch
 	patches.drivers/i40e-0188-i40e-whitespace-fixes.patch
+	patches.drivers/i40e-0189-i40e-Warn-admin-to-reload-VF-driver-on-port-VLAN-con.patch
 
 	########################################################
 	# Wireless Networking
