i40e: prep vsi_open logic for non-netdev cases (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15564,6 +15564,7 @@
 	patches.drivers/i40e-0271-i40e-Fix-an-issue-with-displaying-IPv4-FD-filters.patch
 	patches.drivers/i40e-0272-i40e-i40evf-add-tracking-to-NVM-busy-state.patch
 	patches.drivers/i40e-0273-i40e-i40evf-update-AdminQ-API.patch
+	patches.drivers/i40e-0274-i40e-prep-vsi_open-logic-for-non-netdev-cases.patch
 
 	########################################################
 	# Wireless Networking
