i40e: Adds FCoE related code to i40e core driver (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15726,6 +15726,7 @@
 	patches.drivers/i40e-0433-i40e-Give-link-more-time-after-setting-flow-control.patch
 	patches.drivers/i40e-0434-i40e-always-print-aqtx-answer.patch
 	patches.drivers/i40e-0435-i40e-adds-FCoE-code-to-the-i40e-driver.patch
+	patches.drivers/i40e-0436-i40e-Adds-FCoE-related-code-to-i40e-core-driver.patch
 
 	########################################################
 	# Wireless Networking
