i40e: make warning less verbose (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15758,6 +15758,7 @@
 	patches.drivers/i40e-0465-i40e-Change-wording-to-be-more-consistent.patch
 	patches.drivers/i40e-0466-i40e-Remove-unnecessary-assignment.patch
 	patches.drivers/i40e-0467-i40e-Tell-OS-link-is-going-down-when-calling-set_phy.patch
+	patches.drivers/i40e-0468-i40e-make-warning-less-verbose.patch
 
 	########################################################
 	# Wireless Networking
