i40e/i40evf: Ignore a driver perceived Tx hang if the number of desc pending < 4 (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15751,6 +15751,7 @@
 	patches.drivers/i40e-0458-i40e-Add-checks-and-message-for-Qualified-Module-inf.patch
 	patches.drivers/i40e-0459-i40e-i40evf-add-max-buf-len-to-aq-debug-print-helper.patch
 	patches.drivers/i40e-0460-i40e-quiet-complaints-when-removing-default-MAC-VLAN.patch
+	patches.drivers/i40e-0461-i40e-i40evf-Ignore-a-driver-perceived-Tx-hang-if-the.patch
 
 	########################################################
 	# Wireless Networking
