--- a/series.conf
+++ b/series.conf
@@ -15538,6 +15538,7 @@
 	patches.drivers/i40e-0245-i40e-i40evf-enable-hardware-feature-head-write-back.patch
 	patches.drivers/i40e-0246-i40e-i40evf-reduce-context-descriptors.patch
 	patches.drivers/i40e-0247-i40e-potential-array-underflow-in-i40e_vc_process_vf.patch
+	patches.drivers/i40e-0248-i40e-i40evf-Add-EEE-LPI-stats.patch
 
 	########################################################
 	# Wireless Networking
