--- a/series.conf
+++ b/series.conf
@@ -15537,6 +15537,7 @@
 	patches.drivers/i40e-0244-i40e-Refactor-and-cleanup-i40e_open-adding-i40e_vsi_.patch
 	patches.drivers/i40e-0245-i40e-i40evf-enable-hardware-feature-head-write-back.patch
 	patches.drivers/i40e-0246-i40e-i40evf-reduce-context-descriptors.patch
+	patches.drivers/i40e-0247-i40e-potential-array-underflow-in-i40e_vc_process_vf.patch
 
 	########################################################
 	# Wireless Networking
