i40e: main driver core (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15290,6 +15290,9 @@
 	patches.drivers/0020-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/0021-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 
+	# i40e SP4 update (bsc#909484 FATE#317397)
+	patches.drivers/i40e-0001-i40e-main-driver-core.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
