i40e: clamp jumbo frame size (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15609,6 +15609,7 @@
 	patches.drivers/i40e-0316-i40e-Rework-register-diagnostic.patch
 	patches.drivers/i40e-0317-i40e-remove-check-for-large-buffer.patch
 	patches.drivers/i40e-0318-i40e-i40evf-remove-unused-RX_LRO-define.patch
+	patches.drivers/i40e-0319-i40e-clamp-jumbo-frame-size.patch
 
 	########################################################
 	# Wireless Networking
