--- a/series.conf
+++ b/series.conf
@@ -15704,6 +15704,7 @@
 	patches.drivers/i40e-0411-i40e-i40evf-Force-a-shifted-1-to-be-unsigned.patch
 	patches.drivers/i40e-0412-i40e-tolerate-lost-interrupts.patch
 	patches.drivers/i40e-0413-i40e-Fix-a-boundary-condition-and-turning-off-of-ntu.patch
+	patches.drivers/i40e-0414-i40e-disable-TPH.patch
 
 	########################################################
 	# Wireless Networking
