i40e: don't remove HMC that doesn't exist (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15625,6 +15625,7 @@
 	patches.drivers/i40e-0332-i40e-add-vsi-x-cast-stats.patch
 	patches.drivers/i40e-0333-i40e-add-xcast-stats-for-port.patch
 	patches.drivers/i40e-0334-i40e-print-full-link-message.patch
+	patches.drivers/i40e-0335-i40e-don-t-remove-HMC-that-doesn-t-exist.patch
 
 	########################################################
 	# Wireless Networking
