i40e: remove check for large buffer (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15607,6 +15607,7 @@
 	patches.drivers/i40e-0314-i40e-relax-the-firmware-API-version-check.patch
 	patches.drivers/i40e-0315-i40e-don-t-use-OR-to-check-a-value.patch
 	patches.drivers/i40e-0316-i40e-Rework-register-diagnostic.patch
+	patches.drivers/i40e-0317-i40e-remove-check-for-large-buffer.patch
 
 	########################################################
 	# Wireless Networking
