i40e: Fix dangling ring pointers upon driver removal (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15661,6 +15661,7 @@
 	patches.drivers/i40e-0368-i40e-i40evf-i40e_register.h-update.patch
 	patches.drivers/i40e-0369-i40e-workaround-NVM-GLQF_HKEY.patch
 	patches.drivers/i40e-0370-i40e-i40evf-Reset-Head-and-Tail-on-AQ-initialization.patch
+	patches.drivers/i40e-0371-i40e-Fix-dangling-ring-pointers-upon-driver-removal.patch
 
 	########################################################
 	# Wireless Networking
