--- a/series.conf
+++ b/series.conf
@@ -15511,6 +15511,7 @@
 	patches.drivers/i40e-0218-i40e-clean-up-comment-style.patch
 	patches.drivers/i40e-0219-i40e-Remove-a-FW-workaround-for-Number-of-MSIX-vecto.patch
 	patches.drivers/i40e-0220-i40e-count-timeout-events.patch
+	patches.drivers/i40e-0221-i40e-Remove-a-redundant-filter-addition.patch
 
 	########################################################
 	# Wireless Networking
