i40e: Add a FD flush counter to ethtool (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15745,6 +15745,7 @@
 	patches.drivers/i40e-0452-i40e-Update-flow-director-error-messages-to-reduce-u.patch
 	patches.drivers/i40e-0453-i40e-Some-FD-message-fixes.patch
 	patches.drivers/i40e-0454-i40e-ATR-policy-change-to-flush-the-table-to-clean-s.patch
+	patches.drivers/i40e-0455-i40e-Add-a-FD-flush-counter-to-ethtool.patch
 
 	########################################################
 	# Wireless Networking
