--- a/series.conf
+++ b/series.conf
@@ -15626,6 +15626,7 @@
 	patches.drivers/i40e-0333-i40e-add-xcast-stats-for-port.patch
 	patches.drivers/i40e-0334-i40e-print-full-link-message.patch
 	patches.drivers/i40e-0335-i40e-don-t-remove-HMC-that-doesn-t-exist.patch
+	patches.drivers/i40e-0336-i40e-remove-irqs-only-when-they-are-set-up.patch
 
 	########################################################
 	# Wireless Networking
