--- a/series.conf
+++ b/series.conf
@@ -15499,6 +15499,7 @@
 	patches.drivers/i40e-0206-i40e-remove-dead-code.patch
 	patches.drivers/i40e-0207-i40e-set-VF-state-to-active-when-reset-is-complete.patch
 	patches.drivers/i40e-0208-i40e-reset-VFs-after-PF-reset.patch
+	patches.drivers/i40e-0209-i40e-enable-extant-VFs.patch
 
 	########################################################
 	# Wireless Networking
