i40e: fix race conditions on queuing skb for HW time stamp (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15715,6 +15715,7 @@
 	patches.fixes/net-add-ndo-to-get-id-of-physical-port-of-the-device.patch
 	patches.drivers/i40e-0423-i40e-Add-ndo_get_phys_port_id-callback-support.patch
 	patches.drivers/i40e-0424-i40e-never-generate-both-software-and-hardware-times.patch
+	patches.drivers/i40e-0425-i40e-fix-race-conditions-on-queuing-skb-for-HW-time-.patch
 
 	########################################################
 	# Wireless Networking
