i40e: rework shadow ram read functions (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15441,6 +15441,7 @@
 	patches.drivers/i40e-0148-i40e-Reduce-range-of-interrupt-reg-in-reg-test.patch
 	patches.drivers/i40e-0149-i40e-move-PF-ID-init-from-PF-reset-to-SC-init.patch
 	patches.drivers/i40e-0150-i40e-check-MAC-type-before-any-REG-access.patch
+	patches.drivers/i40e-0151-i40e-rework-shadow-ram-read-functions.patch
 
 	########################################################
 	# Wireless Networking
