--- a/series.conf
+++ b/series.conf
@@ -15319,6 +15319,7 @@
 	patches.drivers/i40e-0026-i40e-Move-rings-from-pointer-to-array-to-array-of-po.patch
 	patches.drivers/i40e-0027-i40e-Add-support-for-64-bit-netstats.patch
 	patches.drivers/i40e-0028-i40e-do-not-flush-after-re-enabling-interrupts.patch
+	patches.drivers/i40e-0029-i40e-don-t-free-nonexistent-rings.patch
 
 	########################################################
 	# Wireless Networking
