--- a/series.conf
+++ b/series.conf
@@ -15706,6 +15706,7 @@
 	patches.drivers/i40e-0413-i40e-Fix-a-boundary-condition-and-turning-off-of-ntu.patch
 	patches.drivers/i40e-0414-i40e-disable-TPH.patch
 	patches.drivers/i40e-0415-i40e-Finish-implementation-of-ethtool-get-settings.patch
+	patches.drivers/i40e-0416-i40e-i40evf-Add-new-HW-link-info-variable-an_enabled.patch
 
 	########################################################
 	# Wireless Networking
