--- a/series.conf
+++ b/series.conf
@@ -15491,6 +15491,7 @@
 	patches.drivers/i40e-0198-i40e-refactor-flow-director.patch
 	patches.drivers/i40e-0199-i40e-implement-DCB-support-infastructure.patch
 	patches.drivers/i40e-0200-i40e-add-DCB-and-DCBNL-support.patch
+	patches.drivers/i40e-0201-i40e-add-DCB-option-to-Kconfig.patch
 
 	########################################################
 	# Wireless Networking
