--- a/series.conf
+++ b/series.conf
@@ -15725,6 +15725,7 @@
 	patches.drivers/i40e-0432-i40e-Fix-firmware-API-version-errors.patch
 	patches.drivers/i40e-0433-i40e-Give-link-more-time-after-setting-flow-control.patch
 	patches.drivers/i40e-0434-i40e-always-print-aqtx-answer.patch
+	patches.drivers/i40e-0435-i40e-adds-FCoE-code-to-the-i40e-driver.patch
 
 	########################################################
 	# Wireless Networking
