--- a/series.conf
+++ b/series.conf
@@ -15569,6 +15569,7 @@
 	patches.drivers/i40e-0276-i40e-use-generic-vsi_open-to-unquiesce-vsi.patch
 	patches.drivers/i40e-0277-i40e-rework-fdir-setup-and-teardown.patch
 	patches.drivers/i40e-0278-i40e-Cleanup-if-else-statements.patch
+	patches.drivers/i40e-0279-i40e-Tweak-for-loop-in-i40e_ethtool.c.patch
 
 	########################################################
 	# Wireless Networking
