i40e: function to reconfigure RSS queues and rebuild (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15372,6 +15372,7 @@
 	patches.drivers/i40e-0079-i40e-trivial-fixes.patch
 	patches.drivers/i40e-0080-i40e-use-same-number-of-queues-as-CPUs.patch
 	patches.drivers/i40e-0081-i40e-reinit-flow-for-the-main-VSI.patch
+	patches.drivers/i40e-0082-i40e-function-to-reconfigure-RSS-queues-and-rebuild.patch
 
 	########################################################
 	# Wireless Networking
