--- a/series.conf
+++ b/series.conf
@@ -15405,6 +15405,7 @@
 	patches.drivers/i40e-0112-i40e-report-VF-MAC-addresses-correctly.patch
 	patches.drivers/i40e-0113-i40e-Dump-the-whole-NVM-not-half.patch
 	patches.drivers/i40e-0114-i40e-fix-mac-address-checking.patch
+	patches.drivers/i40e-0115-i40e-Change-the-ethtool-NVM-read-method-to-use-AQ.patch
 
 	########################################################
 	# Wireless Networking
