i40e: clean up comment style (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15508,6 +15508,7 @@
 	patches.drivers/i40e-0215-i40e-Flow-Director-sideband-accounting.patch
 	patches.drivers/i40e-0216-i40e-Prevent-overflow-due-to-kzalloc.patch
 	patches.drivers/i40e-0217-i40e-i40evf-i40e-implementation-for-skb_set_hash.patch
+	patches.drivers/i40e-0218-i40e-clean-up-comment-style.patch
 
 	########################################################
 	# Wireless Networking
