--- a/series.conf
+++ b/series.conf
@@ -15593,6 +15593,7 @@
 	patches.drivers/i40e-0300-i40e-Check-PCI_IOV-config-to-avoid-compile-error.patch
 	patches.drivers/i40e-0301-i40e-fix-passing-wrong-error-code-to-i40e_open.patch
 	patches.drivers/i40e-0302-i40e-igb-ixgbe-remove-usless-return-statements.patch
+	patches.drivers/i40e-0303-i40e-i40evf-Update-check-for-AQ-aliveness.patch
 
 	########################################################
 	# Wireless Networking
