--- a/series.conf
+++ b/series.conf
@@ -15739,6 +15739,7 @@
 	patches.drivers/i40e-0446-i40e-Cleaning-up-missing-null-terminate-in-conjuncti.patch
 	patches.drivers/i40e-0447-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/i40e-0448-i40e-Fix-for-recent-kernel-panic.patch
+	patches.drivers/i40e-0449-i40e-Fix-a-few-potential-VF-dereferences.patch
 
 	########################################################
 	# Wireless Networking
