i40e: use global pci_vfs_assigned() to replace local i40e_vfs_are_assigned() (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15762,6 +15762,7 @@
 	patches.drivers/i40e-0469-i40e-Fix-an-issue-when-PF-reset-fails.patch
 	patches.drivers/i40e-0470-i40e-fix-panic-due-to-too-early-Tx-queue-enable.patch
 	patches.drivers/i40e-0471-i40e-i40evf-Bump-i40e-i40evf-versions.patch
+	patches.drivers/i40e-0472-i40e-use-global-pci_vfs_assigned-to-replace-local-i4.patch
 
 	########################################################
 	# Wireless Networking
