--- a/series.conf
+++ b/series.conf
@@ -15606,6 +15606,7 @@
 	patches.drivers/i40e-0313-i40-disable-FCoE-for-MFP-modes.patch
 	patches.drivers/i40e-0314-i40e-relax-the-firmware-API-version-check.patch
 	patches.drivers/i40e-0315-i40e-don-t-use-OR-to-check-a-value.patch
+	patches.drivers/i40e-0316-i40e-Rework-register-diagnostic.patch
 
 	########################################################
 	# Wireless Networking
