i40e: abstract the close path for better netdev vsis (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15565,6 +15565,7 @@
 	patches.drivers/i40e-0272-i40e-i40evf-add-tracking-to-NVM-busy-state.patch
 	patches.drivers/i40e-0273-i40e-i40evf-update-AdminQ-API.patch
 	patches.drivers/i40e-0274-i40e-prep-vsi_open-logic-for-non-netdev-cases.patch
+	patches.drivers/i40e-0275-i40e-abstract-the-close-path-for-better-netdev-vsis.patch
 
 	########################################################
 	# Wireless Networking
