i40e: move i40e_reset_vf (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15394,6 +15394,7 @@
 	patches.drivers/i40e-0101-i40e-Implementation-of-VXLAN-ndo-s.patch
 	patches.fixes/net-add-802.1ad-802.1ah-QinQ-ethertypes.patch
 	patches.drivers/i40e-0103-i40e-Rx-checksum-offload-for-VXLAN.patch
+	patches.drivers/i40e-0104-i40e-move-i40e_reset_vf.patch
 
 	########################################################
 	# Wireless Networking
