i40e: Fix off by one in i40e_dbg_command_write (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15383,6 +15383,7 @@
 	patches.drivers/i40e-0090-i40e-fix-up-scanf-decoders.patch
 	patches.drivers/i40e-0091-i40e-more-print_hex_dump-use.patch
 	patches.drivers/i40e-0092-i40e-Fix-wrong-mask-bits-being-used-in-misc-interrup.patch
+	patches.drivers/i40e-0093-i40e-Fix-off-by-one-in-i40e_dbg_command_write.patch
 
 	########################################################
 	# Wireless Networking
