i40e/i40evf: Use dma_set_mask_and_coherent (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15527,6 +15527,7 @@
 	patches.drivers/i40e-0234-i40e-Bug-fix-for-FDIR-replay-logic.patch
 	patches.drivers/i40e-0235-i40e-Let-MDD-events-be-handled-by-MDD-handler.patch
 	patches.drivers/i40e-0236-i40e-i40evf-Use-correct-number-of-VF-vectors.patch
+	patches.drivers/i40e-0237-i40e-i40evf-Use-dma_set_mask_and_coherent.patch
 
 	########################################################
 	# Wireless Networking
