i40e: add support for triggering EMPR (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15345,6 +15345,7 @@
 	patches.drivers/i40e-0052-i40e-fix-debugging-messages.patch
 	patches.drivers/i40e-0053-i40e-default-debug-mask-setting.patch
 	patches.drivers/i40e-0054-i40e-add-interrupt-test.patch
+	patches.drivers/i40e-0055-i40e-add-support-for-triggering-EMPR.patch
 
 	########################################################
 	# Wireless Networking
