--- a/series.conf
+++ b/series.conf
@@ -15567,6 +15567,7 @@
 	patches.drivers/i40e-0274-i40e-prep-vsi_open-logic-for-non-netdev-cases.patch
 	patches.drivers/i40e-0275-i40e-abstract-the-close-path-for-better-netdev-vsis.patch
 	patches.drivers/i40e-0276-i40e-use-generic-vsi_open-to-unquiesce-vsi.patch
+	patches.drivers/i40e-0277-i40e-rework-fdir-setup-and-teardown.patch
 
 	########################################################
 	# Wireless Networking
