--- a/series.conf
+++ b/series.conf
@@ -15599,6 +15599,7 @@
 	patches.drivers/i40e-0306-i40e-i40evf-Remove-reserved-PCTYPE-defines.patch
 	patches.drivers/i40e-0307-i40e-Report-cmd-data-in-ETHTOOL_GRXCLSRLCNT-instead-.patch
 	patches.drivers/i40e-0308-i40e-Use-the-new-i40e_get_fd_cnt_all-function-in-oth.patch
+	patches.drivers/i40e-0309-i40e-i40evf-remove-storm-control.patch
 
 	########################################################
 	# Wireless Networking
