i40e: make message meaningful (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15477,6 +15477,7 @@
 	patches.drivers/i40e-0184-i40e-fix-log-message-wording.patch
 	patches.drivers/i40e-0185-i40e-remove-extra-register-write.patch
 	patches.drivers/i40e-0186-i40e-associate-VMDq-queue-with-VM-type.patch
+	patches.drivers/i40e-0187-i40e-make-message-meaningful.patch
 
 	########################################################
 	# Wireless Networking
