--- a/series.conf
+++ b/series.conf
@@ -15416,6 +15416,7 @@
 	patches.drivers/i40e-0123-i40e-catch-unset-q_vector.patch
 	patches.drivers/i40e-0124-i40e-Fix-ring-allocation.patch
 	patches.drivers/i40e-0125-i40e-I40E_FLAG_MQ_ENABLED-is-not-used.patch
+	patches.drivers/i40e-0126-i40e-Remove-unnecessary-prototypes.patch
 
 	########################################################
 	# Wireless Networking
