i40e: notify VF of all types of resets (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15610,6 +15610,7 @@
 	patches.drivers/i40e-0317-i40e-remove-check-for-large-buffer.patch
 	patches.drivers/i40e-0318-i40e-i40evf-remove-unused-RX_LRO-define.patch
 	patches.drivers/i40e-0319-i40e-clamp-jumbo-frame-size.patch
+	patches.drivers/i40e-0320-i40e-notify-VF-of-all-types-of-resets.patch
 
 	########################################################
 	# Wireless Networking
