i40e: set pf_id based on device and function numbers (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15333,6 +15333,7 @@
 	patches.drivers/i40e-0040-i40e-use-pf_id-for-pf-function-id-in-qtx_ctl.patch
 	patches.drivers/i40e-0041-i40e-remove-unused-including-linux-version.h.patch
 	patches.drivers/i40e-0042-i40e-fix-error-return-code-in-i40e_probe.patch
+	patches.drivers/i40e-0043-i40e-set-pf_id-based-on-device-and-function-numbers.patch
 
 	########################################################
 	# Wireless Networking
