i40e,igb,ixgbe: remove usless return statements (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15592,6 +15592,7 @@
 	patches.drivers/i40e-0299-i40e-remove-Tx-work-for-ptp.patch
 	patches.drivers/i40e-0300-i40e-Check-PCI_IOV-config-to-avoid-compile-error.patch
 	patches.drivers/i40e-0301-i40e-fix-passing-wrong-error-code-to-i40e_open.patch
+	patches.drivers/i40e-0302-i40e-igb-ixgbe-remove-usless-return-statements.patch
 
 	########################################################
 	# Wireless Networking
