i40e: Hide the Port VLAN VLAN ID (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15428,6 +15428,7 @@
 	patches.drivers/i40e-0135-i40e-support-VFs-on-PFs-other-than-0.patch
 	patches.drivers/i40e-0136-i40e-Fix-VF-driver-MAC-address-configuration.patch
 	patches.drivers/i40e-0137-i40e-use-correct-struct-for-get-and-update-vsi-param.patch
+	patches.drivers/i40e-0138-i40e-Hide-the-Port-VLAN-VLAN-ID.patch
 
 	########################################################
 	# Wireless Networking
