i40e: refactor stats collection (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15613,6 +15613,7 @@
 	patches.drivers/i40e-0320-i40e-notify-VF-of-all-types-of-resets.patch
 	patches.drivers/i40e-0321-i40e-i40evf-VEB-structure-added-GTIME-macro-update.patch
 	patches.drivers/i40e-0322-i40e-refactor-send-version.patch
+	patches.drivers/i40e-0323-i40e-refactor-stats-collection.patch
 
 	########################################################
 	# Wireless Networking
