pci_regs.h: Add PCI bus link speed and width defines (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15387,6 +15387,7 @@
 	patches.drivers/i40e-0094-i40e-make-functions-static-and-remove-dead-code.patch
 	patches.drivers/i40e-0095-i40e-using-for_each_set_bit-to-simplify-the-code.patch
 	patches.drivers/i40e-0096-i40e-Suppress-HMC-error-to-Interrupt-message-level.patch
+	patches.fixes/pci_regs.h-Add-PCI-bus-link-speed-and-width-defines.patch
 
 	########################################################
 	# Wireless Networking
