--- a/series.conf
+++ b/series.conf
@@ -15749,6 +15749,7 @@
 	patches.drivers/i40e-0456-i40e-Enable-l2tsel-bit-for-VLAN-tag-control.patch
 	patches.drivers/i40e-0457-i40e-set-num_queue_pairs-to-num-configured-by-VF.patch
 	patches.drivers/i40e-0458-i40e-Add-checks-and-message-for-Qualified-Module-inf.patch
+	patches.drivers/i40e-0459-i40e-i40evf-add-max-buf-len-to-aq-debug-print-helper.patch
 
 	########################################################
 	# Wireless Networking
