i40e: Enable all PCTYPEs except FCOE for RSS (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15354,6 +15354,7 @@
 	patches.drivers/i40e-0061-i40e-Add-flag-for-L2-VEB-filtering.patch
 	patches.drivers/i40e-0062-i40e-enable-early-hardware-support.patch
 	patches.drivers/i40e-0063-i40e-refactor-reset-code.patch
+	patches.drivers/i40e-0064-i40e-Enable-all-PCTYPEs-except-FCOE-for-RSS.patch
 
 	########################################################
 	# Wireless Networking
