--- a/series.conf
+++ b/series.conf
@@ -15462,6 +15462,7 @@
 	patches.drivers/i40e-0169-i40e-Turn-flow-director-off-in-MFP-mode.patch
 	patches.drivers/i40e-0170-i40e-use-assignment-instead-of-memcpy.patch
 	patches.drivers/i40e-0171-i40e-drop-unused-macros.patch
+	patches.drivers/i40e-0172-i40e-Update-the-Current-NVM-version-Low-value.patch
 
 	########################################################
 	# Wireless Networking
