--- a/series.conf
+++ b/series.conf
@@ -15572,6 +15572,7 @@
 	patches.drivers/i40e-0279-i40e-Tweak-for-loop-in-i40e_ethtool.c.patch
 	patches.drivers/i40e-0280-i40e-report-VF-link-state-correctly.patch
 	patches.drivers/i40e-0281-i40e-fix-Timesync-Tx-interrupt-handler-code.patch
+	patches.drivers/i40e-0282-i40e-remove-ptp_tx_work-timestamp-work-item.patch
 
 	########################################################
 	# Wireless Networking
