--- a/series.conf
+++ b/series.conf
@@ -15586,6 +15586,7 @@
 	patches.drivers/i40e-0293-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/i40e-0294-i40e-add-required-include.patch
 	patches.drivers/i40e-0295-i40e-i40evf-set-proper-default-for-ITR-registers.patch
+	patches.drivers/i40e-0296-i40e-i40evf-control-auto-ITR-through-ethtool.patch
 
 	########################################################
 	# Wireless Networking
