--- a/series.conf
+++ b/series.conf
@@ -15713,6 +15713,7 @@
 	patches.drivers/i40e-0420-i40e-Implement-set_settings-for-ethtool.patch
 	patches.drivers/i40e-0421-i40e-remove-unnecessary-break-after-goto.patch
 	patches.fixes/net-add-ndo-to-get-id-of-physical-port-of-the-device.patch
+	patches.drivers/i40e-0423-i40e-Add-ndo_get_phys_port_id-callback-support.patch
 
 	########################################################
 	# Wireless Networking
