i40e: fix TCP flag replication for hardware offload (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15553,6 +15553,7 @@
 	patches.drivers/i40e-0260-i40e-i40evf-Remove-addressof-casts-to-same-type.patch
 	patches.drivers/i40e-0261-i40e-Remove-casts-of-pointer-to-same-type.patch
 	patches.drivers/i40e-0262-i40e-remove-open-coded-skb_cow_head.patch
+	patches.drivers/i40e-0263-i40e-fix-TCP-flag-replication-for-hardware-offload.patch
 
 	########################################################
 	# Wireless Networking
