i40e: debugfs fixups (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15322,6 +15322,7 @@
 	patches.drivers/i40e-0029-i40e-don-t-free-nonexistent-rings.patch
 	patches.drivers/i40e-0030-i40e-assign-correct-vector-to-VF.patch
 	patches.drivers/i40e-0031-i40e-fixup-legacy-interrupt-handling.patch
+	patches.drivers/i40e-0032-i40e-debugfs-fixups.patch
 
 	########################################################
 	# Wireless Networking
