--- a/series.conf
+++ b/series.conf
@@ -15682,6 +15682,7 @@
 	patches.drivers/i40e-0389-i40e-reapply-LAA-after-reset.patch
 	patches.drivers/i40e-0390-i40e-no-pf-reset-at-pci-remove.patch
 	patches.drivers/i40e-0391-i40e-Bypass-timeout-recovery-level-0-so-as-to-not-ca.patch
+	patches.drivers/i40e-0392-i40e-do-not-take-NVM-ownership-for-SR-read.patch
 
 	########################################################
 	# Wireless Networking
