--- a/series.conf
+++ b/series.conf
@@ -15424,6 +15424,7 @@
 	patches.drivers/i40e-0131-i40e-Do-not-enable-default-port-on-the-VEB.patch
 	patches.drivers/i40e-0132-i40e-use-struct-assign-instead-of-memcpy.patch
 	patches.drivers/i40e-0133-i40e-don-t-allocate-zero-size.patch
+	patches.drivers/i40e-0134-i40e-acknowledge-VFLR-when-disabling-SR-IOV.patch
 
 	########################################################
 	# Wireless Networking
