i40e/i40evf: set proper default for ITR registers (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15585,6 +15585,7 @@
 	patches.drivers/i40e-0292-i40e-i40evf-Retrieve-and-store-missing-link-config-i.patch
 	patches.drivers/i40e-0293-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/i40e-0294-i40e-add-required-include.patch
+	patches.drivers/i40e-0295-i40e-i40evf-set-proper-default-for-ITR-registers.patch
 
 	########################################################
 	# Wireless Networking
