i40e: Enable/Disable PF switch LB on SR-IOV configure changes (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15443,6 +15443,7 @@
 	patches.drivers/i40e-0150-i40e-check-MAC-type-before-any-REG-access.patch
 	patches.drivers/i40e-0151-i40e-rework-shadow-ram-read-functions.patch
 	patches.drivers/i40e-0152-i40e-whitespace-paren-and-comment-tweaks.patch
+	patches.drivers/i40e-0153-i40e-Enable-Disable-PF-switch-LB-on-SR-IOV-configure.patch
 
 	########################################################
 	# Wireless Networking
