i40e/i40evf: add ASQ write back timeout variable to AQ structure (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15696,6 +15696,7 @@
 	patches.drivers/i40e-0403-i40e-i40evf-clear-aq-bah-bal-on-shutdown.patch
 	patches.drivers/i40e-0404-i40e-clear-all-queues-and-interrupts.patch
 	patches.drivers/i40e-0405-i40e-Correct-mask-assignment-value.patch
+	patches.drivers/i40e-0406-i40e-i40evf-add-ASQ-write-back-timeout-variable-to-A.patch
 
 	########################################################
 	# Wireless Networking
