i40e: Enable l2tsel bit for VLAN tag control (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15746,6 +15746,7 @@
 	patches.drivers/i40e-0453-i40e-Some-FD-message-fixes.patch
 	patches.drivers/i40e-0454-i40e-ATR-policy-change-to-flush-the-table-to-clean-s.patch
 	patches.drivers/i40e-0455-i40e-Add-a-FD-flush-counter-to-ethtool.patch
+	patches.drivers/i40e-0456-i40e-Enable-l2tsel-bit-for-VLAN-tag-control.patch
 
 	########################################################
 	# Wireless Networking
