i40e: ATR policy change to flush the table to clean stale ATR rules (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15744,6 +15744,7 @@
 	patches.drivers/i40e-0451-i40e-Fix-TSO-and-hw-checksums-for-non-accelerated-vl.patch
 	patches.drivers/i40e-0452-i40e-Update-flow-director-error-messages-to-reduce-u.patch
 	patches.drivers/i40e-0453-i40e-Some-FD-message-fixes.patch
+	patches.drivers/i40e-0454-i40e-ATR-policy-change-to-flush-the-table-to-clean-s.patch
 
 	########################################################
 	# Wireless Networking
