i40e/i40evf: Add set_fc and init of FC settings (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15708,6 +15708,7 @@
 	patches.drivers/i40e-0415-i40e-Finish-implementation-of-ethtool-get-settings.patch
 	patches.drivers/i40e-0416-i40e-i40evf-Add-new-HW-link-info-variable-an_enabled.patch
 	patches.drivers/i40e-0417-i40e-move-nway-reset.patch
+	patches.drivers/i40e-0418-i40e-i40evf-Add-set_fc-and-init-of-FC-settings.patch
 
 	########################################################
 	# Wireless Networking
