i40e: use assignment instead of memcpy (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15460,6 +15460,7 @@
 	patches.drivers/i40e-0167-i40e-trivial-formatting-and-checkpatch-fixes.patch
 	patches.drivers/i40e-0168-i40e-Add-a-dummy-packet-template.patch
 	patches.drivers/i40e-0169-i40e-Turn-flow-director-off-in-MFP-mode.patch
+	patches.drivers/i40e-0170-i40e-use-assignment-instead-of-memcpy.patch
 
 	########################################################
 	# Wireless Networking
