i40e: Fix for recent kernel panic (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15738,6 +15738,7 @@
 	patches.drivers/i40e-0445-i40e-use-correct-structure-type-name-in-sizeof.patch
 	patches.drivers/i40e-0446-i40e-Cleaning-up-missing-null-terminate-in-conjuncti.patch
 	patches.drivers/i40e-0447-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
+	patches.drivers/i40e-0448-i40e-Fix-for-recent-kernel-panic.patch
 
 	########################################################
 	# Wireless Networking
