i40e: Reset the VF upon conflicting VLAN configuration (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15558,6 +15558,7 @@
 	patches.drivers/i40e-0265-i40e-Add-bridge-FDB-add-del-dump-ops.patch
 	patches.drivers/i40e-0266-i40e-i40evf-unhide-and-enable-to-one-prefena-field.patch
 	patches.drivers/i40e-0267-i40e-i40evf-Bump-build-versions.patch
+	patches.drivers/i40e-0268-i40e-Reset-the-VF-upon-conflicting-VLAN-configuratio.patch
 
 	########################################################
 	# Wireless Networking
