i40e: add missing VSI statistics (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15615,6 +15615,7 @@
 	patches.drivers/i40e-0322-i40e-refactor-send-version.patch
 	patches.drivers/i40e-0323-i40e-refactor-stats-collection.patch
 	patches.drivers/i40e-0324-i40e-i40evf-remove-rx_errors-and-rx_missed.patch
+	patches.drivers/i40e-0325-i40e-add-missing-VSI-statistics.patch
 
 	########################################################
 	# Wireless Networking
