i40e: restrict diag test length (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15346,6 +15346,7 @@
 	patches.drivers/i40e-0053-i40e-default-debug-mask-setting.patch
 	patches.drivers/i40e-0054-i40e-add-interrupt-test.patch
 	patches.drivers/i40e-0055-i40e-add-support-for-triggering-EMPR.patch
+	patches.drivers/i40e-0056-i40e-restrict-diag-test-length.patch
 
 	########################################################
 	# Wireless Networking
