net: Add support for hardware-offloaded encapsulation (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15300,6 +15300,7 @@
 	patches.drivers/i40e-0007-i40e-debugfs-interface.patch
 	patches.drivers/i40e-0008-i40e-include-i40e-in-kernel-proper.patch
 	patches.fixes/list-introduce-list_first_entry_or_null.patch
+	patches.fixes/net-Add-support-for-hardware-offloaded-encapsulation.patch
 
 	########################################################
 	# Wireless Networking
