i40e: Patch to enable Ethtool/netdev feature flag for NTUPLE control (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15533,6 +15533,7 @@
 	patches.drivers/i40e-0240-net-i40e-Avoid-double-setting-of-NETIF_F_SG-for-the-.patch
 	patches.fixes/net-core-Add-VF-link-state-control.patch
 	patches.drivers/i40e-0242-i40e-support-VF-link-state-ndo.patch
+	patches.drivers/i40e-0243-i40e-Patch-to-enable-Ethtool-netdev-feature-flag-for.patch
 
 	########################################################
 	# Wireless Networking
