i40e: delete netdev after deleting napi and vectors (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15515,6 +15515,7 @@
 	patches.drivers/i40e-0222-i40e-Fix-static-checker-warning.patch
 	patches.drivers/i40e-0223-i40e-fix-nvm-version-and-remove-firmware-report.patch
 	patches.drivers/i40e-0224-i40e-i40evf-carefully-fill-tx-ring.patch
+	patches.drivers/i40e-0225-i40e-delete-netdev-after-deleting-napi-and-vectors.patch
 
 	########################################################
 	# Wireless Networking
