i40e: fix pf reset after offline test (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15366,6 +15366,7 @@
 	patches.drivers/i40e-0073-i40e-remove-and-fix-confusing-define-name.patch
 	patches.drivers/i40e-0074-i40e-fix-null-dereference.patch
 	patches.drivers/i40e-0075-i40e-fix-up-some-of-the-ethtool-connection-reporting.patch
+	patches.drivers/i40e-0076-i40e-fix-pf-reset-after-offline-test.patch
 
 	########################################################
 	# Wireless Networking
