i40e: Tx/Rx rings declaration (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15595,6 +15595,7 @@
 	patches.drivers/i40e-0302-i40e-igb-ixgbe-remove-usless-return-statements.patch
 	patches.drivers/i40e-0303-i40e-i40evf-Update-check-for-AQ-aliveness.patch
 	patches.drivers/i40e-0304-i40e-enable-descriptor-prefetch-for-VFs.patch
+	patches.drivers/i40e-0305-i40e-Tx-Rx-rings-declaration.patch
 
 	########################################################
 	# Wireless Networking
