i40e: only create PTP device node once (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15687,6 +15687,7 @@
 	patches.drivers/i40e-0394-i40e-rename-i40e_ptp_enable-to-i40e_ptp_feature_enab.patch
 	patches.drivers/i40e-0395-i40e-break-PTP-hardware-control-from-ioctl-command-f.patch
 	patches.drivers/i40e-0396-i40e-don-t-store-user-requested-mode-until-we-ve-val.patch
+	patches.drivers/i40e-0397-i40e-only-create-PTP-device-node-once.patch
 
 	########################################################
 	# Wireless Networking
