--- a/series.conf
+++ b/series.conf
@@ -15575,6 +15575,7 @@
 	patches.drivers/i40e-0282-i40e-remove-ptp_tx_work-timestamp-work-item.patch
 	patches.drivers/i40e-0283-i40e-Retain-MAC-filters-when-changing-port-VLAN.patch
 	patches.drivers/i40e-0284-i40e-Use-port-VLAN-in-MAC-VLAN-filter-configuration.patch
+	patches.drivers/i40e-0285-i40e-i40evf-add-driver-version-string-to-driver-vers.patch
 
 	########################################################
 	# Wireless Networking
