--- a/series.conf
+++ b/series.conf
@@ -15612,6 +15612,7 @@
 	patches.drivers/i40e-0319-i40e-clamp-jumbo-frame-size.patch
 	patches.drivers/i40e-0320-i40e-notify-VF-of-all-types-of-resets.patch
 	patches.drivers/i40e-0321-i40e-i40evf-VEB-structure-added-GTIME-macro-update.patch
+	patches.drivers/i40e-0322-i40e-refactor-send-version.patch
 
 	########################################################
 	# Wireless Networking
