i40e: guard against vf message races (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15407,6 +15407,7 @@
 	patches.drivers/i40e-0114-i40e-fix-mac-address-checking.patch
 	patches.drivers/i40e-0115-i40e-Change-the-ethtool-NVM-read-method-to-use-AQ.patch
 	patches.drivers/i40e-0116-i40e-fix-constant-cast-issues.patch
+	patches.drivers/i40e-0117-i40e-guard-against-vf-message-races.patch
 
 	########################################################
 	# Wireless Networking
