i40e: fix constant cast issues (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15406,6 +15406,7 @@
 	patches.drivers/i40e-0113-i40e-Dump-the-whole-NVM-not-half.patch
 	patches.drivers/i40e-0114-i40e-fix-mac-address-checking.patch
 	patches.drivers/i40e-0115-i40e-Change-the-ethtool-NVM-read-method-to-use-AQ.patch
+	patches.drivers/i40e-0116-i40e-fix-constant-cast-issues.patch
 
 	########################################################
 	# Wireless Networking
