i40e: check for netdev before debugfs use (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15545,6 +15545,7 @@
 	patches.drivers/i40e-0252-i40e-eeprom-integrity-check-on-load-and-empr.patch
 	patches.drivers/i40e-0253-i40e-Cleanup-in-FDIR-SB-ethtool-code.patch
 	patches.drivers/i40e-0254-i40e-Add-functionality-for-FD-SB-to-drop-packets.patch
+	patches.drivers/i40e-0255-i40e-check-for-netdev-before-debugfs-use.patch
 
 	########################################################
 	# Wireless Networking
