i40e: simplified init string (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15520,6 +15520,7 @@
 	patches.drivers/i40e-0227-i40e-i40evf-Some-flow-director-HW-definition-fixes.patch
 	patches.drivers/i40e-0228-i40e-make-string-references-to-q-be-queue.patch
 	patches.drivers/i40e-0229-i40e-cleanup-strings.patch
+	patches.drivers/i40e-0230-i40e-simplified-init-string.patch
 
 	########################################################
 	# Wireless Networking
