--- a/series.conf
+++ b/series.conf
@@ -15313,6 +15313,7 @@
 	patches.drivers/i40e-0020-i40e-clean-up-Tx-fast-path.patch
 	patches.drivers/i40e-0021-i40e-Drop-dead-code-and-flags-from-Tx-hotpath.patch
 	patches.drivers/i40e-0022-i40e-Add-support-for-Tx-byte-queue-limits.patch
+	patches.drivers/i40e-0023-i40e-Split-bytes-and-packets-from-Rx-Tx-stats.patch
 
 	########################################################
 	# Wireless Networking
