--- a/series.conf
+++ b/series.conf
@@ -15685,6 +15685,7 @@
 	patches.drivers/i40e-0392-i40e-do-not-take-NVM-ownership-for-SR-read.patch
 	patches.drivers/i40e-0393-i40e-i40evf-Big-endian-fixes-for-handling-HMC.patch
 	patches.drivers/i40e-0394-i40e-rename-i40e_ptp_enable-to-i40e_ptp_feature_enab.patch
+	patches.drivers/i40e-0395-i40e-break-PTP-hardware-control-from-ioctl-command-f.patch
 
 	########################################################
 	# Wireless Networking
