i40e: Rx checksum offload for VXLAN (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15393,6 +15393,7 @@
 	patches.drivers/i40e-0100-i40e-fix-curly-brace-use-and-return-type.patch
 	patches.drivers/i40e-0101-i40e-Implementation-of-VXLAN-ndo-s.patch
 	patches.fixes/net-add-802.1ad-802.1ah-QinQ-ethertypes.patch
+	patches.drivers/i40e-0103-i40e-Rx-checksum-offload-for-VXLAN.patch
 
 	########################################################
 	# Wireless Networking
