--- a/series.conf
+++ b/series.conf
@@ -15635,6 +15635,7 @@
 	patches.drivers/i40e-0342-i40e-not-all-VSIs-have-rings.patch
 	patches.drivers/i40e-0343-i40e-i40evf-remove-chatty-reset-messages.patch
 	patches.drivers/i40e-0344-i40e-i40evf-fix-TSO-accounting.patch
+	patches.drivers/i40e-0345-i40e-i40evf-fix-poll-weight.patch
 
 	########################################################
 	# Wireless Networking
