i40e: use WoL flag when setting LAA (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15677,6 +15677,7 @@
 	patches.drivers/i40e-0384-i40e-Fix-ethtool-coalesce-settings.patch
 	patches.drivers/i40e-0385-i40e-i40evf-remove-reserved-type.patch
 	patches.drivers/i40e-0386-i40e-Add-ablitity-to-enable-disable-link-from-set_li.patch
+	patches.drivers/i40e-0387-i40e-use-WoL-flag-when-setting-LAA.patch
 
 	########################################################
 	# Wireless Networking
