i40e: Stop the VF device after setting its MAC address (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15669,6 +15669,7 @@
 	patches.drivers/i40e-0376-i40e-keep-service-tasks-out-of-reset-process.patch
 	patches.drivers/i40e-0377-i40e-i40evf-Update-RSS-configuration.patch
 	patches.drivers/i40e-0378-i40e-i40evf-modify-debug-prints-to-avoid-seg-faults.patch
+	patches.drivers/i40e-0379-i40e-Stop-the-VF-device-after-setting-its-MAC-addres.patch
 
 	########################################################
 	# Wireless Networking
