i40e: only set up the rings to be used (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15355,6 +15355,7 @@
 	patches.drivers/i40e-0062-i40e-enable-early-hardware-support.patch
 	patches.drivers/i40e-0063-i40e-refactor-reset-code.patch
 	patches.drivers/i40e-0064-i40e-Enable-all-PCTYPEs-except-FCOE-for-RSS.patch
+	patches.drivers/i40e-0065-i40e-only-set-up-the-rings-to-be-used.patch
 
 	########################################################
 	# Wireless Networking
