--- a/series.conf
+++ b/series.conf
@@ -15469,6 +15469,7 @@
 	patches.drivers/i40e-0176-i40e-do-not-bail-when-disabling-if-Tx-queue-disable-.patch
 	patches.drivers/i40e-0177-i40e-allow-VF-to-remove-any-MAC-filter.patch
 	patches.drivers/i40e-0178-i40e-check-for-possible-incorrect-ipv6-checksum.patch
+	patches.drivers/i40e-0179-i40e-adjust-ITR-max-and-min-values.patch
 
 	########################################################
 	# Wireless Networking
