--- a/series.conf
+++ b/series.conf
@@ -15675,6 +15675,7 @@
 	patches.drivers/i40e-0382-i40e-warn-on-newer-older-firmware-API-rev.patch
 	patches.drivers/i40e-0383-i40e-fix-a-stray-print-message.patch
 	patches.drivers/i40e-0384-i40e-Fix-ethtool-coalesce-settings.patch
+	patches.drivers/i40e-0385-i40e-i40evf-remove-reserved-type.patch
 
 	########################################################
 	# Wireless Networking
