i40e: remove open-coded skb_cow_head (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15552,6 +15552,7 @@
 	patches.drivers/i40e-0259-i40e-i40evf-fix-error-checking-path.patch
 	patches.drivers/i40e-0260-i40e-i40evf-Remove-addressof-casts-to-same-type.patch
 	patches.drivers/i40e-0261-i40e-Remove-casts-of-pointer-to-same-type.patch
+	patches.drivers/i40e-0262-i40e-remove-open-coded-skb_cow_head.patch
 
 	########################################################
 	# Wireless Networking
