i40e: remove unused including <linux/version.h> (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15331,6 +15331,7 @@
 	patches.drivers/i40e-0038-i40e-reorder-block-declarations-in-debugfs.patch
 	patches.drivers/i40e-0039-i40e-check-vsi-ptrs-before-dumping-them.patch
 	patches.drivers/i40e-0040-i40e-use-pf_id-for-pf-function-id-in-qtx_ctl.patch
+	patches.drivers/i40e-0041-i40e-remove-unused-including-linux-version.h.patch
 
 	########################################################
 	# Wireless Networking
