i40e: allow for more VSIs (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15638,6 +15638,7 @@
 	patches.drivers/i40e-0345-i40e-i40evf-fix-poll-weight.patch
 	patches.drivers/i40e-0346-i40e-i40evf-remove-deprecated-device-IDs.patch
 	patches.drivers/i40e-0347-i40e-add-checks-for-AQ-error-status-bits.patch
+	patches.drivers/i40e-0348-i40e-allow-for-more-VSIs.patch
 
 	########################################################
 	# Wireless Networking
