--- a/series.conf
+++ b/series.conf
@@ -15509,6 +15509,7 @@
 	patches.drivers/i40e-0216-i40e-Prevent-overflow-due-to-kzalloc.patch
 	patches.drivers/i40e-0217-i40e-i40evf-i40e-implementation-for-skb_set_hash.patch
 	patches.drivers/i40e-0218-i40e-clean-up-comment-style.patch
+	patches.drivers/i40e-0219-i40e-Remove-a-FW-workaround-for-Number-of-MSIX-vecto.patch
 
 	########################################################
 	# Wireless Networking
