i40e: fix function kernel doc description (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15548,6 +15548,7 @@
 	patches.drivers/i40e-0255-i40e-check-for-netdev-before-debugfs-use.patch
 	patches.drivers/i40e-0256-i40e-i40evf-Add-an-FD-message-level.patch
 	patches.drivers/i40e-0257-i40e-Use-DEBUG_FD-message-level-for-an-FD-message.patch
+	patches.drivers/i40e-0258-i40e-fix-function-kernel-doc-description.patch
 
 	########################################################
 	# Wireless Networking
