--- a/series.conf
+++ b/series.conf
@@ -15734,6 +15734,7 @@
 	patches.drivers/i40e-0441-i40e-Minor-comment-changes.patch
 	patches.drivers/i40e-0442-i40e-remove-support-for-vf-unicast-promiscuous-mode.patch
 	patches.drivers/i40e-0443-i40e-Fix-missing-uapi-linux-dcbnl.h-include-in-i40e_.patch
+	patches.drivers/i40e-0444-i40e-fix-sparse-non-static-symbol-warning.patch
 
 	########################################################
 	# Wireless Networking
