--- a/series.conf
+++ b/series.conf
@@ -15672,6 +15672,7 @@
 	patches.drivers/i40e-0379-i40e-Stop-the-VF-device-after-setting-its-MAC-addres.patch
 	patches.drivers/i40e-0380-i40e-make-prep_for_reset-void.patch
 	patches.drivers/i40e-0381-i40e-Add-PF-reset-when-Malicious-driver-event-for-PF.patch
+	patches.drivers/i40e-0382-i40e-warn-on-newer-older-firmware-API-rev.patch
 
 	########################################################
 	# Wireless Networking
