--- a/series.conf
+++ b/series.conf
@@ -15324,6 +15324,7 @@
 	patches.drivers/i40e-0031-i40e-fixup-legacy-interrupt-handling.patch
 	patches.drivers/i40e-0032-i40e-debugfs-fixups.patch
 	patches.drivers/i40e-0033-i40e-clamp-debugfs-nvm-read-command.patch
+	patches.drivers/i40e-0034-i40e-fix-use-of-untrusted-scalar-value-warning.patch
 
 	########################################################
 	# Wireless Networking
