--- a/series.conf
+++ b/series.conf
@@ -15440,6 +15440,7 @@
 	patches.drivers/i40e-0147-i40e-update-firmware-api-to-1.1.patch
 	patches.drivers/i40e-0148-i40e-Reduce-range-of-interrupt-reg-in-reg-test.patch
 	patches.drivers/i40e-0149-i40e-move-PF-ID-init-from-PF-reset-to-SC-init.patch
+	patches.drivers/i40e-0150-i40e-check-MAC-type-before-any-REG-access.patch
 
 	########################################################
 	# Wireless Networking
