--- a/series.conf
+++ b/series.conf
@@ -15584,6 +15584,7 @@
 	patches.drivers/i40e-0291-i40e-Update-function-formal-parameters.patch
 	patches.drivers/i40e-0292-i40e-i40evf-Retrieve-and-store-missing-link-config-i.patch
 	patches.drivers/i40e-0293-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/i40e-0294-i40e-add-required-include.patch
 
 	########################################################
 	# Wireless Networking
